crates/solidity-v2/testing/snapshots/diagnostics_output/structure/placeholder_in_unchecked_block/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[SyntaxError 2573] Error: The placeholder statement "_" cannot be used inside an "unchecked" block.
    ╭─[input.sol:10:13]
    │
 10 │             _;
    │             ┬  
    │             ╰── Error occurred here.
────╯

[SyntaxError 2573] Error: The placeholder statement "_" cannot be used inside an "unchecked" block.
    ╭─[input.sol:18:17]
    │
 18 │                 _;
    │                 ┬  
    │                 ╰── Error occurred here.
────╯
